--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "mongoose": "^7.4.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
