--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
